--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typeorm": "^0.2.18"
   },
   "devDependencies": {
+    "@nestjs/cli": "^6.6.4",
     "@nestjs/testing": "^6.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "4.16.1",
