--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/graphql": "^6.4.2",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.3",
+    "apollo-server-express": "^2.8.1",
     "dotenv": "^8.0.0",
+    "graphql": "^14.4.2",
+    "graphql-tools": "^4.0.5",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
