--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-DB_USER = foo
-DB_PASS = bar
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DABATASE=sample
+DB_USERNAME = root
+DB_PASSWORD = password
