--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^4.0.5",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
