--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rimraf dist && npm run build:graphql && tsc -p tsconfig.build.json",
     "build:graphql": "ts-node \"src/generate-typings.ts\"",
     "format": "prettier --write \"src/**/*.ts\"",
+    "typeorm": "ts-node $(npm bin)/typeorm",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
