--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.3",
     "apollo-server-express": "^2.8.1",
+    "class-validator": "^0.10.0",
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
