--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "sqlite3": "^4.0.9",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.6.4",
