--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "sqlite3": "^4.0.9",
+    "type-graphql": "^0.17.5",
     "typeorm": "^0.2.18",
     "ulid": "^2.3.0"
   },
