--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DABATASE=sample
+DB_DATABASE=sample
 DB_USERNAME=root
 DB_PASSWORD=password
