--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "rimraf dist && npm run build:graphql && tsc -p tsconfig.build.json",
     "build:graphql": "ts-node \"src/generate-typings.ts\"",
     "format": "prettier --write \"src/**/*.ts\"",
-    "typeorm": "ts-node $(npm bin)/typeorm",
+    "typeorm:migration:show": "ts-node $(npm bin)/typeorm migration:show --config ./src/ormconfig.ts",
+    "typeorm:migration:create": "ts-node $(npm bin)/typeorm migration:create --config ./src/ormconfig.ts --dir ./migrations --name",
+    "typeorm:migration:run": "ts-node $(npm bin)/typeorm migration:run --config ./dist/ormconfig.js",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
