--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && npm run build:graphql && tsc -p tsconfig.build.json",
-    "build:graphql": "ts-node \"src/generate-typings.ts\"",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "typeorm:migration:show": "ts-node $(npm bin)/typeorm migration:show --config ./src/ormconfig.ts",
-    "typeorm:migration:create": "ts-node $(npm bin)/typeorm migration:create --config ./src/ormconfig.ts --dir ./migrations --name",
-    "typeorm:migration:run": "ts-node $(npm bin)/typeorm migration:run --config ./dist/ormconfig.js",
+    "db:migrate": "typeorm migration:run",
+    "db:migrate:create": "typeorm migration:create --name",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
