--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=sample
-DB_USERNAME=root
-DB_PASSWORD=password
+DB_USERNAME=docker
+DB_PASSWORD=docker
