--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
-    "db:migrate": "typeorm migration:run",
-    "db:migrate:create": "typeorm migration:create --name",
+    "db:migrate": "ts-node $(npm bin)/typeorm migration:run",
+    "db:migrate:create": "ts-node $(npm bin)/typeorm migration:create --name",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
     "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
