--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
+    "graphql-redis-subscriptions": "^2.1.1",
     "graphql-tools": "^4.0.5",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.12",
